--- a/package.json
+++ b/package.json
@@ -1,12 +1,34 @@
 {
   "name": "@zinkawaii/eslint-config",
   "version": "0.0.2",
-  "main": "index.js",
   "author": "KazariEX",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/KazariEX/eslint-config.git"
   },
-  "type": "module"
+  "type": "module",
+  "files": [
+    "dist",
+    "LICENSE"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "scripts": {
+    "build": "tsup",
+    "watch": "tsup --watch"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^2.15.0",
+    "tsup": "^8.0.2"
+  },
+  "peerDependencies": {
+    "@antfu/eslint-config": "^2.15.0"
+  }
 }
