--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "dist",
     "LICENSE"
   ],
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "types": "./index.d.ts"
     }
   },
   "scripts": {
@@ -25,10 +26,7 @@
     "watch": "tsup --watch"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.15.0",
+    "@antfu/eslint-config": "^2.19.2",
     "tsup": "^8.0.2"
-  },
-  "peerDependencies": {
-    "@antfu/eslint-config": "^2.15.0"
   }
 }
