--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "KazariEX/eslint-config",
   "type": "module",
   "files": [
+    "dist",
     "index.d.ts"
   ],
   "main": "./dist/index.js",
@@ -23,8 +24,8 @@
     "eslint": "eslint ."
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.0.0",
-    "eslint": "^9.9.1",
-    "tsup": "^8.2.4"
+    "@antfu/eslint-config": "^3.6.2",
+    "eslint": "^9.10.0",
+    "tsup": "^8.3.0"
   }
 }
