--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "@zinkawaii/eslint-config",
   "type": "module",
   "version": "0.2.0",
-  "packageManager": "pnpm@10.2.0",
+  "packageManager": "pnpm@10.7.0",
   "author": "KazariEX",
   "license": "MIT",
   "repository": "KazariEX/eslint-config",
   "exports": {
-    ".": "./dist/index.js"
+    ".": {
+      "types": "./index.d.ts",
+      "import": "./dist/index.js"
+    }
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -24,9 +27,14 @@
     "eslint": "eslint ."
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.1.1",
-    "bumpp": "^10.0.1",
-    "eslint": "^9.19.0",
-    "tsup": "^8.3.6"
+    "@antfu/eslint-config": "^4.11.0",
+    "bumpp": "^10.1.0",
+    "eslint": "^9.23.0",
+    "tsup": "^8.4.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
