chore: 迁移至 tsdown

--- a/package.json
+++ b/package.json
@@ -7,21 +7,17 @@
   "license": "MIT",
   "repository": "KazariEX/eslint-config",
   "exports": {
-    ".": {
-      "types": "./index.d.ts",
-      "import": "./dist/index.js"
-    }
+    ".": "./dist/index.js"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
-  "types": "./index.d.ts",
+  "types": "./dist/index.d.ts",
   "files": [
-    "dist",
-    "index.d.ts"
+    "dist"
   ],
   "scripts": {
-    "build": "tsup",
-    "watch": "tsup --watch",
+    "build": "tsdown",
+    "dev": "tsdown -w",
     "prepack": "pnpm run build",
     "release": "bumpp --no-push -c \"release: v%s\"",
     "eslint": "eslint ."
@@ -30,7 +26,7 @@
     "@antfu/eslint-config": "^4.11.0",
     "bumpp": "^10.1.0",
     "eslint": "^9.23.0",
-    "tsup": "^8.4.0"
+    "tsdown": "^0.8.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
