chore: 扩展 `@zinkawaii/tsconfig`

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.11.0",
+    "@zinkawaii/tsconfig": "^0.0.1",
     "bumpp": "^10.1.0",
     "eslint": "^9.23.0",
     "tsdown": "^0.8.0"
