--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@zinkawaii/eslint-config",
   "type": "module",
   "version": "0.2.2",
-  "packageManager": "pnpm@10.7.0",
+  "packageManager": "pnpm@10.8.1",
   "author": "KazariEX",
   "license": "MIT",
   "repository": "KazariEX/eslint-config",
@@ -23,15 +23,16 @@
     "eslint": "eslint ."
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.11.0",
+    "@antfu/eslint-config": "^4.12.0",
     "@zinkawaii/tsconfig": "^0.0.1",
     "bumpp": "^10.1.0",
-    "eslint": "^9.23.0",
-    "tsdown": "^0.8.0"
+    "eslint": "^9.25.0",
+    "tsdown": "^0.8.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "esbuild"
+      "esbuild",
+      "unrs-resolver"
     ]
   }
 }
