--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,12 +1,12 @@
-shamefullyHoist: true
-
 catalog:
-  "@antfu/eslint-config": ^5.2.0
-  "@zinkawaii/tsconfig": ^0.0.2
+  '@antfu/eslint-config': ^5.2.0
+  '@zinkawaii/tsconfig': ^0.0.2
   bumpp: ^10.2.2
   eslint: ^9.33.0
-  tsdown: ^0.13.4
+  tsdown: ^0.14.0
 
 onlyBuiltDependencies:
   - rolldown
   - unrs-resolver
+
+shamefullyHoist: true
